--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=mongodb+srv://admin:cicciomerda1:@cluster0.jqvxi6z.mongodb.net/primo
+MONGODB_URL=mongodb+srv://admin:cicciomerda1@cluster0.jqvxi6z.mongodb.net/primo
 PORT=4000
